--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,4 +37,4 @@ jobs:
       run: |
         git add .
         git commit -m "Posts drafted"
-        git push origin master
+        git push master
