--- a/.github/workflows/schedule-app.yml
+++ b/.github/workflows/schedule-app.yml
@@ -30,4 +30,4 @@ jobs:
         CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       run: |
-        python actions_bot.py
+        python action_bot.py
